--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,7 @@
+Redirect 301 /asap https://www.paypal.me/dhoehr
+Redirect 301 /geld https://www.paypal.me/dhoehr
+Redirect 301 /gibmirdeingeld https://www.paypal.me/dhoehr
+
 ErrorDocument 400 /assets/error_pages/400_bad_request.html
 ErrorDocument 401 /assets/error_pages/401_unauthorized.html
 ErrorDocument 403 /assets/error_pages/403_forbidden.html
